parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block period_token
Rule 2     block -> con_dec var_dec proc_dec stmt
Rule 3     con_dec -> const_token ident_token eql_token number_token con_dec_cdr semicolom_token
Rule 4     con_dec -> empty
Rule 5     con_dec_cdr -> comma_token ident_token eql_token number_token con_dec_cdr
Rule 6     con_dec_cdr -> empty
Rule 7     var_dec -> var_token ident_token var_dec_cdr semicolom_token
Rule 8     var_dec -> empty
Rule 9     var_dec_cdr -> comma_token ident_token var_dec_cdr
Rule 10    var_dec_cdr -> empty
Rule 11    proc_dec -> proc_token ident_token semicolom_token block semicolom_token proc_dec_cdr
Rule 12    proc_dec -> empty
Rule 13    proc_dec_cdr -> proc_token ident_token semicolom_token block semicolom_token proc_dec_cdr
Rule 14    proc_dec_cdr -> empty
Rule 15    stmt -> assign_stmt
Rule 16    stmt -> call_stmt
Rule 17    stmt -> begin_stmt
Rule 18    stmt -> if_stmt
Rule 19    stmt -> while_stmt
Rule 20    stmt -> read_stmt
Rule 21    stmt -> write_stmt
Rule 22    stmt -> empty
Rule 23    assign_stmt -> ident_token become_token expr
Rule 24    call_stmt -> call_token ident_token
Rule 25    begin_stmt -> begin_token stmt begin_stmt_cdr end_token
Rule 26    begin_stmt_cdr -> semicolom_token stmt begin_stmt_cdr
Rule 27    begin_stmt_cdr -> empty
Rule 28    if_stmt -> if_token cond then_token stmt
Rule 29    if_stmt -> if_token cond then_token stmt else_token stmt
Rule 30    while_stmt -> while_token cond do_token stmt
Rule 31    read_stmt -> read_token ident_token
Rule 32    write_stmt -> write_token expr
Rule 33    cond -> odd_token expr
Rule 34    cond -> expr cmp expr
Rule 35    cmp -> eql_token
Rule 36    cmp -> les_token
Rule 37    cmp -> leq_token
Rule 38    cmp -> grt_token
Rule 39    cmp -> geq_token
Rule 40    cmp -> neq_token
Rule 41    expr -> flag no_flag_expr
Rule 42    expr -> no_flag_expr
Rule 43    no_flag_expr -> term plus_token term
Rule 44    no_flag_expr -> term minus_token term
Rule 45    no_flag_expr -> term
Rule 46    flag -> plus_token
Rule 47    flag -> minus_token
Rule 48    term -> factor
Rule 49    term -> factor mul_token term
Rule 50    term -> factor divide_token term
Rule 51    factor -> ident_token
Rule 52    factor -> number_token
Rule 53    factor -> lparent_token expr rparent_token
Rule 54    empty -> <empty>

Terminals, with rules where they appear

become_token         : 23
begin_token          : 25
call_token           : 24
comma_token          : 5 9
const_token          : 3
divide_token         : 50
do_token             : 30
else_token           : 29
end_token            : 25
eql_token            : 3 5 35
error                : 
geq_token            : 39
grt_token            : 38
ident_token          : 3 5 7 9 11 13 23 24 31 51
if_token             : 28 29
leq_token            : 37
les_token            : 36
lparent_token        : 53
minus_token          : 44 47
mul_token            : 49
neq_token            : 40
number_token         : 3 5 52
odd_token            : 33
period_token         : 1
plus_token           : 43 46
proc_token           : 11 13
read_token           : 31
rparent_token        : 53
semicolom_token      : 3 7 11 11 13 13 26
then_token           : 28 29
var_token            : 7
while_token          : 30
write_token          : 32

Nonterminals, with rules where they appear

assign_stmt          : 15
begin_stmt           : 17
begin_stmt_cdr       : 25 26
block                : 1 11 13
call_stmt            : 16
cmp                  : 34
con_dec              : 2
con_dec_cdr          : 3 5
cond                 : 28 29 30
empty                : 4 6 8 10 12 14 22 27
expr                 : 23 32 33 34 34 53
factor               : 48 49 50
flag                 : 41
if_stmt              : 18
no_flag_expr         : 41 42
proc_dec             : 2
proc_dec_cdr         : 11 13
program              : 0
read_stmt            : 20
stmt                 : 2 25 26 28 29 29 30
term                 : 43 43 44 44 45 49 50
var_dec              : 2
var_dec_cdr          : 7 9
while_stmt           : 19
write_stmt           : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block period_token
    (2) block -> . con_dec var_dec proc_dec stmt
    (3) con_dec -> . const_token ident_token eql_token number_token con_dec_cdr semicolom_token
    (4) con_dec -> . empty
    (54) empty -> .

    const_token     shift and go to state 1
    var_token       reduce using rule 54 (empty -> .)
    proc_token      reduce using rule 54 (empty -> .)
    ident_token     reduce using rule 54 (empty -> .)
    call_token      reduce using rule 54 (empty -> .)
    begin_token     reduce using rule 54 (empty -> .)
    if_token        reduce using rule 54 (empty -> .)
    while_token     reduce using rule 54 (empty -> .)
    read_token      reduce using rule 54 (empty -> .)
    write_token     reduce using rule 54 (empty -> .)
    period_token    reduce using rule 54 (empty -> .)

    program                        shift and go to state 2
    empty                          shift and go to state 3
    con_dec                        shift and go to state 4
    block                          shift and go to state 5

state 1

    (3) con_dec -> const_token . ident_token eql_token number_token con_dec_cdr semicolom_token

    ident_token     shift and go to state 6


state 2

    (0) S' -> program .



state 3

    (4) con_dec -> empty .

    var_token       reduce using rule 4 (con_dec -> empty .)
    proc_token      reduce using rule 4 (con_dec -> empty .)
    ident_token     reduce using rule 4 (con_dec -> empty .)
    call_token      reduce using rule 4 (con_dec -> empty .)
    begin_token     reduce using rule 4 (con_dec -> empty .)
    if_token        reduce using rule 4 (con_dec -> empty .)
    while_token     reduce using rule 4 (con_dec -> empty .)
    read_token      reduce using rule 4 (con_dec -> empty .)
    write_token     reduce using rule 4 (con_dec -> empty .)
    semicolom_token reduce using rule 4 (con_dec -> empty .)
    period_token    reduce using rule 4 (con_dec -> empty .)


state 4

    (2) block -> con_dec . var_dec proc_dec stmt
    (7) var_dec -> . var_token ident_token var_dec_cdr semicolom_token
    (8) var_dec -> . empty
    (54) empty -> .

    var_token       shift and go to state 8
    proc_token      reduce using rule 54 (empty -> .)
    ident_token     reduce using rule 54 (empty -> .)
    call_token      reduce using rule 54 (empty -> .)
    begin_token     reduce using rule 54 (empty -> .)
    if_token        reduce using rule 54 (empty -> .)
    while_token     reduce using rule 54 (empty -> .)
    read_token      reduce using rule 54 (empty -> .)
    write_token     reduce using rule 54 (empty -> .)
    period_token    reduce using rule 54 (empty -> .)
    semicolom_token reduce using rule 54 (empty -> .)

    var_dec                        shift and go to state 7
    empty                          shift and go to state 9

state 5

    (1) program -> block . period_token

    period_token    shift and go to state 10


state 6

    (3) con_dec -> const_token ident_token . eql_token number_token con_dec_cdr semicolom_token

    eql_token       shift and go to state 11


state 7

    (2) block -> con_dec var_dec . proc_dec stmt
    (11) proc_dec -> . proc_token ident_token semicolom_token block semicolom_token proc_dec_cdr
    (12) proc_dec -> . empty
    (54) empty -> .

    proc_token      shift and go to state 12
    ident_token     reduce using rule 54 (empty -> .)
    call_token      reduce using rule 54 (empty -> .)
    begin_token     reduce using rule 54 (empty -> .)
    if_token        reduce using rule 54 (empty -> .)
    while_token     reduce using rule 54 (empty -> .)
    read_token      reduce using rule 54 (empty -> .)
    write_token     reduce using rule 54 (empty -> .)
    period_token    reduce using rule 54 (empty -> .)
    semicolom_token reduce using rule 54 (empty -> .)

    empty                          shift and go to state 13
    proc_dec                       shift and go to state 14

state 8

    (7) var_dec -> var_token . ident_token var_dec_cdr semicolom_token

    ident_token     shift and go to state 15


state 9

    (8) var_dec -> empty .

    proc_token      reduce using rule 8 (var_dec -> empty .)
    ident_token     reduce using rule 8 (var_dec -> empty .)
    call_token      reduce using rule 8 (var_dec -> empty .)
    begin_token     reduce using rule 8 (var_dec -> empty .)
    if_token        reduce using rule 8 (var_dec -> empty .)
    while_token     reduce using rule 8 (var_dec -> empty .)
    read_token      reduce using rule 8 (var_dec -> empty .)
    write_token     reduce using rule 8 (var_dec -> empty .)
    period_token    reduce using rule 8 (var_dec -> empty .)
    semicolom_token reduce using rule 8 (var_dec -> empty .)


state 10

    (1) program -> block period_token .

    $end            reduce using rule 1 (program -> block period_token .)


state 11

    (3) con_dec -> const_token ident_token eql_token . number_token con_dec_cdr semicolom_token

    number_token    shift and go to state 16


state 12

    (11) proc_dec -> proc_token . ident_token semicolom_token block semicolom_token proc_dec_cdr

    ident_token     shift and go to state 17


state 13

    (12) proc_dec -> empty .

    ident_token     reduce using rule 12 (proc_dec -> empty .)
    call_token      reduce using rule 12 (proc_dec -> empty .)
    begin_token     reduce using rule 12 (proc_dec -> empty .)
    if_token        reduce using rule 12 (proc_dec -> empty .)
    while_token     reduce using rule 12 (proc_dec -> empty .)
    read_token      reduce using rule 12 (proc_dec -> empty .)
    write_token     reduce using rule 12 (proc_dec -> empty .)
    period_token    reduce using rule 12 (proc_dec -> empty .)
    semicolom_token reduce using rule 12 (proc_dec -> empty .)


state 14

    (2) block -> con_dec var_dec proc_dec . stmt
    (15) stmt -> . assign_stmt
    (16) stmt -> . call_stmt
    (17) stmt -> . begin_stmt
    (18) stmt -> . if_stmt
    (19) stmt -> . while_stmt
    (20) stmt -> . read_stmt
    (21) stmt -> . write_stmt
    (22) stmt -> . empty
    (23) assign_stmt -> . ident_token become_token expr
    (24) call_stmt -> . call_token ident_token
    (25) begin_stmt -> . begin_token stmt begin_stmt_cdr end_token
    (28) if_stmt -> . if_token cond then_token stmt
    (29) if_stmt -> . if_token cond then_token stmt else_token stmt
    (30) while_stmt -> . while_token cond do_token stmt
    (31) read_stmt -> . read_token ident_token
    (32) write_stmt -> . write_token expr
    (54) empty -> .

    ident_token     shift and go to state 27
    call_token      shift and go to state 32
    begin_token     shift and go to state 20
    if_token        shift and go to state 22
    while_token     shift and go to state 19
    read_token      shift and go to state 30
    write_token     shift and go to state 33
    period_token    reduce using rule 54 (empty -> .)
    semicolom_token reduce using rule 54 (empty -> .)

    write_stmt                     shift and go to state 24
    begin_stmt                     shift and go to state 28
    if_stmt                        shift and go to state 29
    call_stmt                      shift and go to state 25
    read_stmt                      shift and go to state 18
    stmt                           shift and go to state 26
    assign_stmt                    shift and go to state 21
    while_stmt                     shift and go to state 31
    empty                          shift and go to state 23

state 15

    (7) var_dec -> var_token ident_token . var_dec_cdr semicolom_token
    (9) var_dec_cdr -> . comma_token ident_token var_dec_cdr
    (10) var_dec_cdr -> . empty
    (54) empty -> .

    comma_token     shift and go to state 35
    semicolom_token reduce using rule 54 (empty -> .)

    var_dec_cdr                    shift and go to state 34
    empty                          shift and go to state 36

state 16

    (3) con_dec -> const_token ident_token eql_token number_token . con_dec_cdr semicolom_token
    (5) con_dec_cdr -> . comma_token ident_token eql_token number_token con_dec_cdr
    (6) con_dec_cdr -> . empty
    (54) empty -> .

    comma_token     shift and go to state 38
    semicolom_token reduce using rule 54 (empty -> .)

    empty                          shift and go to state 39
    con_dec_cdr                    shift and go to state 37

state 17

    (11) proc_dec -> proc_token ident_token . semicolom_token block semicolom_token proc_dec_cdr

    semicolom_token shift and go to state 40


state 18

    (20) stmt -> read_stmt .

    period_token    reduce using rule 20 (stmt -> read_stmt .)
    semicolom_token reduce using rule 20 (stmt -> read_stmt .)
    end_token       reduce using rule 20 (stmt -> read_stmt .)
    else_token      reduce using rule 20 (stmt -> read_stmt .)


state 19

    (30) while_stmt -> while_token . cond do_token stmt
    (33) cond -> . odd_token expr
    (34) cond -> . expr cmp expr
    (41) expr -> . flag no_flag_expr
    (42) expr -> . no_flag_expr
    (46) flag -> . plus_token
    (47) flag -> . minus_token
    (43) no_flag_expr -> . term plus_token term
    (44) no_flag_expr -> . term minus_token term
    (45) no_flag_expr -> . term
    (48) term -> . factor
    (49) term -> . factor mul_token term
    (50) term -> . factor divide_token term
    (51) factor -> . ident_token
    (52) factor -> . number_token
    (53) factor -> . lparent_token expr rparent_token

    odd_token       shift and go to state 43
    plus_token      shift and go to state 50
    minus_token     shift and go to state 47
    ident_token     shift and go to state 51
    number_token    shift and go to state 52
    lparent_token   shift and go to state 45

    no_flag_expr                   shift and go to state 41
    term                           shift and go to state 42
    expr                           shift and go to state 44
    flag                           shift and go to state 46
    cond                           shift and go to state 48
    factor                         shift and go to state 49

state 20

    (25) begin_stmt -> begin_token . stmt begin_stmt_cdr end_token
    (15) stmt -> . assign_stmt
    (16) stmt -> . call_stmt
    (17) stmt -> . begin_stmt
    (18) stmt -> . if_stmt
    (19) stmt -> . while_stmt
    (20) stmt -> . read_stmt
    (21) stmt -> . write_stmt
    (22) stmt -> . empty
    (23) assign_stmt -> . ident_token become_token expr
    (24) call_stmt -> . call_token ident_token
    (25) begin_stmt -> . begin_token stmt begin_stmt_cdr end_token
    (28) if_stmt -> . if_token cond then_token stmt
    (29) if_stmt -> . if_token cond then_token stmt else_token stmt
    (30) while_stmt -> . while_token cond do_token stmt
    (31) read_stmt -> . read_token ident_token
    (32) write_stmt -> . write_token expr
    (54) empty -> .

    ident_token     shift and go to state 27
    call_token      shift and go to state 32
    begin_token     shift and go to state 20
    if_token        shift and go to state 22
    while_token     shift and go to state 19
    read_token      shift and go to state 30
    write_token     shift and go to state 33
    semicolom_token reduce using rule 54 (empty -> .)
    end_token       reduce using rule 54 (empty -> .)

    write_stmt                     shift and go to state 24
    begin_stmt                     shift and go to state 28
    if_stmt                        shift and go to state 29
    call_stmt                      shift and go to state 25
    read_stmt                      shift and go to state 18
    assign_stmt                    shift and go to state 21
    while_stmt                     shift and go to state 31
    stmt                           shift and go to state 53
    empty                          shift and go to state 23

state 21

    (15) stmt -> assign_stmt .

    period_token    reduce using rule 15 (stmt -> assign_stmt .)
    semicolom_token reduce using rule 15 (stmt -> assign_stmt .)
    end_token       reduce using rule 15 (stmt -> assign_stmt .)
    else_token      reduce using rule 15 (stmt -> assign_stmt .)


state 22

    (28) if_stmt -> if_token . cond then_token stmt
    (29) if_stmt -> if_token . cond then_token stmt else_token stmt
    (33) cond -> . odd_token expr
    (34) cond -> . expr cmp expr
    (41) expr -> . flag no_flag_expr
    (42) expr -> . no_flag_expr
    (46) flag -> . plus_token
    (47) flag -> . minus_token
    (43) no_flag_expr -> . term plus_token term
    (44) no_flag_expr -> . term minus_token term
    (45) no_flag_expr -> . term
    (48) term -> . factor
    (49) term -> . factor mul_token term
    (50) term -> . factor divide_token term
    (51) factor -> . ident_token
    (52) factor -> . number_token
    (53) factor -> . lparent_token expr rparent_token

    odd_token       shift and go to state 43
    plus_token      shift and go to state 50
    minus_token     shift and go to state 47
    ident_token     shift and go to state 51
    number_token    shift and go to state 52
    lparent_token   shift and go to state 45

    no_flag_expr                   shift and go to state 41
    term                           shift and go to state 42
    expr                           shift and go to state 44
    flag                           shift and go to state 46
    cond                           shift and go to state 54
    factor                         shift and go to state 49

state 23

    (22) stmt -> empty .

    period_token    reduce using rule 22 (stmt -> empty .)
    semicolom_token reduce using rule 22 (stmt -> empty .)
    end_token       reduce using rule 22 (stmt -> empty .)
    else_token      reduce using rule 22 (stmt -> empty .)


state 24

    (21) stmt -> write_stmt .

    period_token    reduce using rule 21 (stmt -> write_stmt .)
    semicolom_token reduce using rule 21 (stmt -> write_stmt .)
    end_token       reduce using rule 21 (stmt -> write_stmt .)
    else_token      reduce using rule 21 (stmt -> write_stmt .)


state 25

    (16) stmt -> call_stmt .

    period_token    reduce using rule 16 (stmt -> call_stmt .)
    semicolom_token reduce using rule 16 (stmt -> call_stmt .)
    end_token       reduce using rule 16 (stmt -> call_stmt .)
    else_token      reduce using rule 16 (stmt -> call_stmt .)


state 26

    (2) block -> con_dec var_dec proc_dec stmt .

    semicolom_token reduce using rule 2 (block -> con_dec var_dec proc_dec stmt .)
    period_token    reduce using rule 2 (block -> con_dec var_dec proc_dec stmt .)


state 27

    (23) assign_stmt -> ident_token . become_token expr

    become_token    shift and go to state 55


state 28

    (17) stmt -> begin_stmt .

    period_token    reduce using rule 17 (stmt -> begin_stmt .)
    semicolom_token reduce using rule 17 (stmt -> begin_stmt .)
    end_token       reduce using rule 17 (stmt -> begin_stmt .)
    else_token      reduce using rule 17 (stmt -> begin_stmt .)


state 29

    (18) stmt -> if_stmt .

    period_token    reduce using rule 18 (stmt -> if_stmt .)
    semicolom_token reduce using rule 18 (stmt -> if_stmt .)
    end_token       reduce using rule 18 (stmt -> if_stmt .)
    else_token      reduce using rule 18 (stmt -> if_stmt .)


state 30

    (31) read_stmt -> read_token . ident_token

    ident_token     shift and go to state 56


state 31

    (19) stmt -> while_stmt .

    period_token    reduce using rule 19 (stmt -> while_stmt .)
    semicolom_token reduce using rule 19 (stmt -> while_stmt .)
    end_token       reduce using rule 19 (stmt -> while_stmt .)
    else_token      reduce using rule 19 (stmt -> while_stmt .)


state 32

    (24) call_stmt -> call_token . ident_token

    ident_token     shift and go to state 57


state 33

    (32) write_stmt -> write_token . expr
    (41) expr -> . flag no_flag_expr
    (42) expr -> . no_flag_expr
    (46) flag -> . plus_token
    (47) flag -> . minus_token
    (43) no_flag_expr -> . term plus_token term
    (44) no_flag_expr -> . term minus_token term
    (45) no_flag_expr -> . term
    (48) term -> . factor
    (49) term -> . factor mul_token term
    (50) term -> . factor divide_token term
    (51) factor -> . ident_token
    (52) factor -> . number_token
    (53) factor -> . lparent_token expr rparent_token

    plus_token      shift and go to state 50
    minus_token     shift and go to state 47
    ident_token     shift and go to state 51
    number_token    shift and go to state 52
    lparent_token   shift and go to state 45

    no_flag_expr                   shift and go to state 41
    expr                           shift and go to state 58
    flag                           shift and go to state 46
    term                           shift and go to state 42
    factor                         shift and go to state 49

state 34

    (7) var_dec -> var_token ident_token var_dec_cdr . semicolom_token

    semicolom_token shift and go to state 59


state 35

    (9) var_dec_cdr -> comma_token . ident_token var_dec_cdr

    ident_token     shift and go to state 60


state 36

    (10) var_dec_cdr -> empty .

    semicolom_token reduce using rule 10 (var_dec_cdr -> empty .)


state 37

    (3) con_dec -> const_token ident_token eql_token number_token con_dec_cdr . semicolom_token

    semicolom_token shift and go to state 61


state 38

    (5) con_dec_cdr -> comma_token . ident_token eql_token number_token con_dec_cdr

    ident_token     shift and go to state 62


state 39

    (6) con_dec_cdr -> empty .

    semicolom_token reduce using rule 6 (con_dec_cdr -> empty .)


state 40

    (11) proc_dec -> proc_token ident_token semicolom_token . block semicolom_token proc_dec_cdr
    (2) block -> . con_dec var_dec proc_dec stmt
    (3) con_dec -> . const_token ident_token eql_token number_token con_dec_cdr semicolom_token
    (4) con_dec -> . empty
    (54) empty -> .

    const_token     shift and go to state 1
    var_token       reduce using rule 54 (empty -> .)
    proc_token      reduce using rule 54 (empty -> .)
    ident_token     reduce using rule 54 (empty -> .)
    call_token      reduce using rule 54 (empty -> .)
    begin_token     reduce using rule 54 (empty -> .)
    if_token        reduce using rule 54 (empty -> .)
    while_token     reduce using rule 54 (empty -> .)
    read_token      reduce using rule 54 (empty -> .)
    write_token     reduce using rule 54 (empty -> .)
    semicolom_token reduce using rule 54 (empty -> .)

    empty                          shift and go to state 3
    con_dec                        shift and go to state 4
    block                          shift and go to state 63

state 41

    (42) expr -> no_flag_expr .

    do_token        reduce using rule 42 (expr -> no_flag_expr .)
    then_token      reduce using rule 42 (expr -> no_flag_expr .)
    period_token    reduce using rule 42 (expr -> no_flag_expr .)
    semicolom_token reduce using rule 42 (expr -> no_flag_expr .)
    end_token       reduce using rule 42 (expr -> no_flag_expr .)
    else_token      reduce using rule 42 (expr -> no_flag_expr .)
    rparent_token   reduce using rule 42 (expr -> no_flag_expr .)
    eql_token       reduce using rule 42 (expr -> no_flag_expr .)
    les_token       reduce using rule 42 (expr -> no_flag_expr .)
    leq_token       reduce using rule 42 (expr -> no_flag_expr .)
    grt_token       reduce using rule 42 (expr -> no_flag_expr .)
    geq_token       reduce using rule 42 (expr -> no_flag_expr .)
    neq_token       reduce using rule 42 (expr -> no_flag_expr .)


state 42

    (43) no_flag_expr -> term . plus_token term
    (44) no_flag_expr -> term . minus_token term
    (45) no_flag_expr -> term .

    plus_token      shift and go to state 64
    minus_token     shift and go to state 65
    do_token        reduce using rule 45 (no_flag_expr -> term .)
    then_token      reduce using rule 45 (no_flag_expr -> term .)
    eql_token       reduce using rule 45 (no_flag_expr -> term .)
    les_token       reduce using rule 45 (no_flag_expr -> term .)
    leq_token       reduce using rule 45 (no_flag_expr -> term .)
    grt_token       reduce using rule 45 (no_flag_expr -> term .)
    geq_token       reduce using rule 45 (no_flag_expr -> term .)
    neq_token       reduce using rule 45 (no_flag_expr -> term .)
    period_token    reduce using rule 45 (no_flag_expr -> term .)
    semicolom_token reduce using rule 45 (no_flag_expr -> term .)
    end_token       reduce using rule 45 (no_flag_expr -> term .)
    else_token      reduce using rule 45 (no_flag_expr -> term .)
    rparent_token   reduce using rule 45 (no_flag_expr -> term .)


state 43

    (33) cond -> odd_token . expr
    (41) expr -> . flag no_flag_expr
    (42) expr -> . no_flag_expr
    (46) flag -> . plus_token
    (47) flag -> . minus_token
    (43) no_flag_expr -> . term plus_token term
    (44) no_flag_expr -> . term minus_token term
    (45) no_flag_expr -> . term
    (48) term -> . factor
    (49) term -> . factor mul_token term
    (50) term -> . factor divide_token term
    (51) factor -> . ident_token
    (52) factor -> . number_token
    (53) factor -> . lparent_token expr rparent_token

    plus_token      shift and go to state 50
    minus_token     shift and go to state 47
    ident_token     shift and go to state 51
    number_token    shift and go to state 52
    lparent_token   shift and go to state 45

    no_flag_expr                   shift and go to state 41
    expr                           shift and go to state 66
    flag                           shift and go to state 46
    term                           shift and go to state 42
    factor                         shift and go to state 49

state 44

    (34) cond -> expr . cmp expr
    (35) cmp -> . eql_token
    (36) cmp -> . les_token
    (37) cmp -> . leq_token
    (38) cmp -> . grt_token
    (39) cmp -> . geq_token
    (40) cmp -> . neq_token

    eql_token       shift and go to state 70
    les_token       shift and go to state 71
    leq_token       shift and go to state 67
    grt_token       shift and go to state 68
    geq_token       shift and go to state 69
    neq_token       shift and go to state 72

    cmp                            shift and go to state 73

state 45

    (53) factor -> lparent_token . expr rparent_token
    (41) expr -> . flag no_flag_expr
    (42) expr -> . no_flag_expr
    (46) flag -> . plus_token
    (47) flag -> . minus_token
    (43) no_flag_expr -> . term plus_token term
    (44) no_flag_expr -> . term minus_token term
    (45) no_flag_expr -> . term
    (48) term -> . factor
    (49) term -> . factor mul_token term
    (50) term -> . factor divide_token term
    (51) factor -> . ident_token
    (52) factor -> . number_token
    (53) factor -> . lparent_token expr rparent_token

    plus_token      shift and go to state 50
    minus_token     shift and go to state 47
    ident_token     shift and go to state 51
    number_token    shift and go to state 52
    lparent_token   shift and go to state 45

    no_flag_expr                   shift and go to state 41
    expr                           shift and go to state 74
    flag                           shift and go to state 46
    term                           shift and go to state 42
    factor                         shift and go to state 49

state 46

    (41) expr -> flag . no_flag_expr
    (43) no_flag_expr -> . term plus_token term
    (44) no_flag_expr -> . term minus_token term
    (45) no_flag_expr -> . term
    (48) term -> . factor
    (49) term -> . factor mul_token term
    (50) term -> . factor divide_token term
    (51) factor -> . ident_token
    (52) factor -> . number_token
    (53) factor -> . lparent_token expr rparent_token

    ident_token     shift and go to state 51
    number_token    shift and go to state 52
    lparent_token   shift and go to state 45

    no_flag_expr                   shift and go to state 75
    term                           shift and go to state 42
    factor                         shift and go to state 49

state 47

    (47) flag -> minus_token .

    ident_token     reduce using rule 47 (flag -> minus_token .)
    number_token    reduce using rule 47 (flag -> minus_token .)
    lparent_token   reduce using rule 47 (flag -> minus_token .)


state 48

    (30) while_stmt -> while_token cond . do_token stmt

    do_token        shift and go to state 76


state 49

    (48) term -> factor .
    (49) term -> factor . mul_token term
    (50) term -> factor . divide_token term

    plus_token      reduce using rule 48 (term -> factor .)
    minus_token     reduce using rule 48 (term -> factor .)
    eql_token       reduce using rule 48 (term -> factor .)
    les_token       reduce using rule 48 (term -> factor .)
    leq_token       reduce using rule 48 (term -> factor .)
    grt_token       reduce using rule 48 (term -> factor .)
    geq_token       reduce using rule 48 (term -> factor .)
    neq_token       reduce using rule 48 (term -> factor .)
    rparent_token   reduce using rule 48 (term -> factor .)
    period_token    reduce using rule 48 (term -> factor .)
    semicolom_token reduce using rule 48 (term -> factor .)
    end_token       reduce using rule 48 (term -> factor .)
    else_token      reduce using rule 48 (term -> factor .)
    do_token        reduce using rule 48 (term -> factor .)
    then_token      reduce using rule 48 (term -> factor .)
    mul_token       shift and go to state 77
    divide_token    shift and go to state 78


state 50

    (46) flag -> plus_token .

    ident_token     reduce using rule 46 (flag -> plus_token .)
    number_token    reduce using rule 46 (flag -> plus_token .)
    lparent_token   reduce using rule 46 (flag -> plus_token .)


state 51

    (51) factor -> ident_token .
